more typed wrappers - we now support collections with Contains and Count, more website work

--- a/src/Sooda/Sooda.csproj
+++ b/src/Sooda/Sooda.csproj
@@ -757,6 +757,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "QL\TypedWrappers\SoqlCollectionWrapperExpression.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "QL\TypedWrappers\SoqlDateTimeWrapperExpression.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
