renamed SoodaCodeGenerator back to SoodaStubGen and SoodaPrecompile back to SoodaCompileStubs

--- a/src/Sooda.CodeGen/Sooda.CodeGen.csproj
+++ b/src/Sooda.CodeGen/Sooda.CodeGen.csproj
@@ -159,6 +159,10 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "SoodaProject.xsd"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "VScsprojProjectFile.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
