added some experimental collection caching code (moved SoodaCache to Sooda.Caching) added Statistics object which gathers per-transaction and global statistics fixed some nasty SoqlToSqlConverter bug with inheritance added PrefetchRelated option to SoodaSnapshotOptions added high-resolution query timer

--- a/src/Sooda.CodeGen/Sooda.CodeGen.csproj
+++ b/src/Sooda.CodeGen/Sooda.CodeGen.csproj
@@ -163,6 +163,21 @@
                     BuildAction = "EmbeddedResource"
                 />
                 <File
+                    RelPath = "VS2005csprojProjectFile.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "VS2005ProjectFileBase.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "VS2005vbprojProjectFile.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "VScsprojProjectFile.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
