--- a/tests/ConsoleTest/App.config
+++ b/tests/ConsoleTest/App.config
@@ -5,6 +5,7 @@
     </configSections>
 
     <appSettings>
+		<add key="sooda.logging" value="nlog" />
     </appSettings>
     
     <runtime>
@@ -17,7 +18,7 @@
         </appenders>
 
         <rules>
-            <logger name="*" appendTo="console" />
+            <logger name="Sooda.Cache" appendTo="console" />
         </rules>
     </nlog>
 </configuration>
