--- a/tests/TestCases/App.config
+++ b/tests/TestCases/App.config
@@ -6,6 +6,7 @@
 
     <appSettings>
         <add key="sooda.config" value="xmlconfig" />
+        <add key="sooda.logging" value="console" />
     </appSettings>
 
     <nlog internalLogToConsole="true">
