--- a/src/Sooda/Sooda-net-2.0.csproj
+++ b/src/Sooda/Sooda-net-2.0.csproj
@@ -34,19 +34,18 @@
     <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
     <ConfigurationOverrideFile>
     </ConfigurationOverrideFile>
-    <DefineConstants>VSNET</DefineConstants>
+    <DefineConstants>VSNET,DOTNET2</DefineConstants>
     <DocumentationFile>
     </DocumentationFile>
     <DebugSymbols>true</DebugSymbols>
     <FileAlignment>4096</FileAlignment>
     <NoStdLib>false</NoStdLib>
-    <NoWarn>
-    </NoWarn>
+    <NoWarn>1699</NoWarn>
     <Optimize>false</Optimize>
     <RegisterForComInterop>false</RegisterForComInterop>
     <RemoveIntegerChecks>false</RemoveIntegerChecks>
-    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <WarningLevel>1</WarningLevel>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningLevel>4</WarningLevel>
     <DebugType>full</DebugType>
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
@@ -57,20 +56,18 @@
     <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
     <ConfigurationOverrideFile>
     </ConfigurationOverrideFile>
-    <DefineConstants>
-    </DefineConstants>
+    <DefineConstants>VSNET,DOTNET2</DefineConstants>
     <DocumentationFile>
     </DocumentationFile>
     <DebugSymbols>false</DebugSymbols>
     <FileAlignment>4096</FileAlignment>
     <NoStdLib>false</NoStdLib>
-    <NoWarn>
-    </NoWarn>
-    <Optimize>false</Optimize>
+    <NoWarn>1699</NoWarn>
+    <Optimize>true</Optimize>
     <RegisterForComInterop>false</RegisterForComInterop>
     <RemoveIntegerChecks>false</RemoveIntegerChecks>
-    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <WarningLevel>1</WarningLevel>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningLevel>4</WarningLevel>
     <DebugType>none</DebugType>
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
@@ -78,6 +75,7 @@
     <Reference Include="System">
       <Name>System</Name>
     </Reference>
+    <Reference Include="System.configuration" />
     <Reference Include="System.Data">
       <Name>System.Data</Name>
     </Reference>
@@ -311,12 +309,7 @@
     <Compile Include="ObjectMapper\WeakSoodaObject.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="QL\Collections.cs">
-      <DependentUpon>Collections.xml</DependentUpon>
-      <SubType>Code</SubType>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
+    <Compile Include="QL\SoqlExpressionCollection.cs" />
     <Compile Include="QL\GetInvolvedClassesVisitor.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -716,10 +709,6 @@
     <Compile Include="Xml\XmlDataSource.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Content Include="QL\Collections.xml">
-      <Generator>SBCollectionGenerator</Generator>
-      <LastGenOutput>Collections.cs</LastGenOutput>
-    </Content>
     <None Include="QL\TypedWrappers\makewrappers.pl" />
     <None Include="Schema\SoodaSchema.xsx">
       <DependentUpon>SoodaSchema.xsd</DependentUpon>
