--- a/tests/TestCases/Sooda.UnitTests.TestCases-net-2.0.csproj
+++ b/tests/TestCases/Sooda.UnitTests.TestCases-net-2.0.csproj
@@ -3,14 +3,13 @@
     <ProjectType>Local</ProjectType>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{0D67237B-4FBA-4BD9-95C3-24B5F427D014}</ProjectGuid>
+    <ProjectGuid>{2DB9451B-8E35-45C3-94E6-32026E9DE8D1}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ApplicationIcon>
-    </ApplicationIcon>
+    <ApplicationIcon>App.ico</ApplicationIcon>
     <AssemblyKeyContainerName>
     </AssemblyKeyContainerName>
-    <AssemblyName>Sooda.CodeGen</AssemblyName>
+    <AssemblyName>Sooda.UnitTests.TestCases</AssemblyName>
     <AssemblyOriginatorKeyFile>
     </AssemblyOriginatorKeyFile>
     <DefaultClientScript>JScript</DefaultClientScript>
@@ -18,8 +17,8 @@
     <DefaultTargetSchema>IE50</DefaultTargetSchema>
     <DelaySign>false</DelaySign>
     <OutputType>Library</OutputType>
-    <RootNamespace>Sooda.CodeGen</RootNamespace>
-    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
+    <RootNamespace>Sooda.UnitTests.TestCases</RootNamespace>
+    <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
     <StartupObject>
     </StartupObject>
     <FileUpgradeFlags>
@@ -34,13 +33,14 @@
     <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
     <ConfigurationOverrideFile>
     </ConfigurationOverrideFile>
-    <DefineConstants>TRACE;DEBUG;VSNET,DOTNET2</DefineConstants>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
     <DocumentationFile>
     </DocumentationFile>
     <DebugSymbols>true</DebugSymbols>
     <FileAlignment>4096</FileAlignment>
     <NoStdLib>false</NoStdLib>
-    <NoWarn>1699</NoWarn>
+    <NoWarn>
+    </NoWarn>
     <Optimize>false</Optimize>
     <RegisterForComInterop>false</RegisterForComInterop>
     <RemoveIntegerChecks>false</RemoveIntegerChecks>
@@ -56,22 +56,27 @@
     <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
     <ConfigurationOverrideFile>
     </ConfigurationOverrideFile>
-    <DefineConstants>TRACE;VSNET,DOTNET2</DefineConstants>
+    <DefineConstants>TRACE</DefineConstants>
     <DocumentationFile>
     </DocumentationFile>
     <DebugSymbols>false</DebugSymbols>
     <FileAlignment>4096</FileAlignment>
     <NoStdLib>false</NoStdLib>
-    <NoWarn>1699</NoWarn>
+    <NoWarn>
+    </NoWarn>
     <Optimize>true</Optimize>
     <RegisterForComInterop>false</RegisterForComInterop>
     <RemoveIntegerChecks>false</RemoveIntegerChecks>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <WarningLevel>4</WarningLevel>
     <DebugType>none</DebugType>
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework">
+      <Name>NUnit.Framework</Name>
+      <HintPath>..\..\..\external\NUnit.Framework.dll</HintPath>
+    </Reference>
     <Reference Include="System">
       <Name>System</Name>
     </Reference>
@@ -81,107 +86,111 @@
     <Reference Include="System.Xml">
       <Name>System.XML</Name>
     </Reference>
-    <ProjectReference Include="..\Sooda\Sooda-net-2.0.csproj">
-      <Name>Sooda-net-2.0</Name>
+    <ProjectReference Include="..\..\src\Sooda\Sooda-net-2.0.csproj">
+      <Name>Sooda</Name>
       <Project>{FCC9B644-9093-41F6-8F0D-F98F22474CB5}</Project>
+      <Package>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</Package>
+    </ProjectReference>
+    <ProjectReference Include="..\BaseObjects\Sooda.UnitTests.BaseObjects-net-2.0.csproj">
+      <Name>Sooda.UnitTests.BaseObjects-net-2.0</Name>
+      <Project>{A1D122ED-CF84-4EF0-A138-72922DD50409}</Project>
+      <Package>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</Package>
+    </ProjectReference>
+    <ProjectReference Include="..\UnitTestObjects\Sooda.UnitTests.Objects-net-2.0.csproj">
+      <Name>Sooda.UnitTests.Objects-net-2.0</Name>
+      <Project>{3574E1EF-2272-4474-85D9-0718B3D452E3}</Project>
       <Package>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</Package>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
+    <Content Include="App.ico" />
     <Compile Include="AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="AssemblySign.cs">
+    <Compile Include="ObjectMapper\AbstractTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CDIL\CDILContext.cs">
+    <Compile Include="ObjectMapper\CacheTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CDIL\CDILParser.cs">
+    <Compile Include="ObjectMapper\CollectionTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CDIL\CDILPrettyPrinter.cs">
+    <Compile Include="ObjectMapper\ComplexGetListTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CDIL\CDILTemplate.cs">
+    <Compile Include="ObjectMapper\DataTypesTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CDIL\CDILToken.cs">
+    <Compile Include="ObjectMapper\DeleteTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CDIL\CDILTokenizer.cs">
+    <Compile Include="ObjectMapper\GetListTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CodeDomClassSkeletonGenerator.cs">
+    <Compile Include="ObjectMapper\InheritanceTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CodeDomClassStubGenerator.cs">
+    <Compile Include="ObjectMapper\InsertBugTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CodeDomHelpers.cs">
+    <Compile Include="ObjectMapper\KeyGenTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CodeDomListRelationTableGenerator.cs">
+    <Compile Include="ObjectMapper\MultiPKTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CodeGenerator.cs">
+    <Compile Include="ObjectMapper\Nto1CollectionTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="EmbedSchema.cs">
+    <Compile Include="ObjectMapper\NtoNCollectionTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="ExternalProjectInfoCollection.cs">
+    <Compile Include="ObjectMapper\PersistenceTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="ICodeGeneratorOutput.cs">
+    <Compile Include="ObjectMapper\PrecommitTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="IProjectFile.cs">
+    <Compile Include="ObjectMapper\PrimaryKeyTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="NullProjectFile.cs">
+    <Compile Include="ObjectMapper\RefTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="SoodaCodeGenException.cs">
+    <Compile Include="ObjectMapper\RetrievalTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="SoodaProject.cs">
+    <Compile Include="ObjectMapper\SerializationTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="VS2005csprojProjectFile.cs">
+    <Compile Include="Soql\ConstantFoldingTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="VS2005ProjectFileBase.cs">
+    <Compile Include="Soql\EvaluateTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="VS2005vbprojProjectFile.cs">
+    <Compile Include="Soql\GetInvolvedClassTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="VScsprojProjectFile.cs">
+    <Compile Include="Soql\RelationalOperatorsTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="VSProjectFileBase.cs">
+    <Compile Include="Soql\SoqlTranslatorTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="VSvbprojProjectFile.cs">
+    <Compile Include="Soql\TypeCheckingTest.cs">
       <SubType>Code</SubType>
     </Compile>
-    <EmbeddedResource Include="CDIL\Templates\ClassField.cdil" />
-    <EmbeddedResource Include="CDIL\Templates\DatabaseSchema.cdil" />
-    <EmbeddedResource Include="CDIL\Templates\Factory.cdil" />
-    <EmbeddedResource Include="CDIL\Templates\ListWrapper.cdil" />
-    <EmbeddedResource Include="CDIL\Templates\NullableTypedWrapper.cdil" />
-    <EmbeddedResource Include="CDIL\Templates\Skeleton.cdil" />
-    <EmbeddedResource Include="CDIL\Templates\Stub.cdil" />
-    <EmbeddedResource Include="CDIL\Templates\TypedCollectionWrapper.cdil" />
-    <EmbeddedResource Include="CDIL\Templates\TypedWrapper.cdil" />
-    <EmbeddedResource Include="SoodaProject.xsd" />
+    <Compile Include="TestSqlDataSource.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>copy $(ProjectDir)App.config $(TargetPath).config &gt; nul</PostBuildEvent>
   </PropertyGroup>
 </Project>
