--- a/examples/Soodawind/Soodawind.Objects/Soodawind.Objects.csproj
+++ b/examples/Soodawind/Soodawind.Objects/Soodawind.Objects.csproj
@@ -16,7 +16,7 @@
                 DefaultTargetSchema = "IE50"
                 DelaySign = "false"
                 OutputType = "Library"
-                PreBuildEvent = "SoodaStubGen.exe $(ProjectDir)Soodawind.Objects.soodaproject"
+                PreBuildEvent = '"%SOODA_DIR%\bin\net-1.1\SoodaStubGen.exe" $(ProjectDir)Soodawind.Objects.soodaproject'
                 PostBuildEvent = ""
                 RootNamespace = "Soodawind.Objects"
                 RunPostBuildEvent = "OnBuildSuccess"
@@ -82,8 +82,8 @@
                 <Reference
                     Name = "Sooda"
                     AssemblyName = "Sooda"
-                    HintPath = "C:\Program Files\Sooda 0.7\Bin\Sooda.dll"
-                    AssemblyFolderKey = "hkcu\sooda0.7"
+                    HintPath = "C:\Program Files\Sooda 0.8\bin\net-1.1\Sooda.dll"
+                    AssemblyFolderKey = "hklm\sooda"
                 />
             </References>
         </Build>
