--- a/wizard/vs2005/work/cs-console/Soodawind/Soodawind.csproj
+++ b/wizard/vs2005/work/cs-console/Soodawind/Soodawind.csproj
@@ -1,4 +1,4 @@
-﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -38,6 +38,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="_DBSchema.bin" />
     <Compile Include="_Stubs.cs" />
+    <Compile Include="Category.cs" />
+    <Compile Include="Product.cs" />
+    <Compile Include="Supplier.cs" />
+    <Compile Include="Shipper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
