--- a/src/Sooda/Sooda-net-2.0.csproj
+++ b/src/Sooda/Sooda-net-2.0.csproj
@@ -96,6 +96,9 @@
     <Compile Include="Caching\CacheUtils.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Caching\SoodaCacheKey.cs" />
+    <Compile Include="Caching\LruCache.cs" />
+    <Compile Include="Caching\ISoodaCacheStore.cs" />
     <Compile Include="Caching\ISoodaCacheLock.cs" />
     <Compile Include="Caching\SoodaCacheInvalidateReason.cs" />
     <Compile Include="Caching\SoodaInProcessCache.cs" />
@@ -106,19 +109,10 @@
     <Compile Include="Caching\SoodaNoCache.cs" />
     <Compile Include="Caching\SoodaNoCachingPolicy.cs" />
     <Compile Include="Caching\ISoodaCachingPolicy.cs" />
-    <Compile Include="Caching\SoodaCachedCollectionKeyComplex.cs" />
-    <Compile Include="Caching\SoodaCachedCollectionKeyAllRecords.cs" />
-    <Compile Include="Caching\SoodaCachedCollectionKeySimple.cs" />
     <Compile Include="Caching\SoodaCache.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Caching\SoodaCachedCollection.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Caching\SoodaCachedCollectionHash.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Caching\SoodaCachedCollectionKey.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Caching\SoodaCacheEntry.cs">
